update maven config